build(deps): update Spring Boot to 4.0.6 and related dependencies
- Update Spring Boot from 4.0.5 to 4.0.6
- Update springdoc-openapi from 3.0.2 to 3.0.3
- Update spotless-maven-plugin from 3.0.0 to 3.4.0

style: apply code formatting improvements

- Reformat record declarations for better readability
- Replace explicit type declarations with `var` where appropriate
- Add nullability annotations using @Nullable from JSpecify
- Remove unused imports across test files
- Replace Collections.emptyList() with List.of()